--- a/GameplayTimeTracker/MainWindow.xaml
+++ b/GameplayTimeTracker/MainWindow.xaml
@@ -224,14 +224,20 @@
                     Margin="20,0,0,0" 
                     Height="30"
                     Width="140"
-                    Click="AddExecButton_Click"/>
+                    Click="AddExecButton_Click">
+                <Button.Effect>
+                    <DropShadowEffect Color="Black" BlurRadius="10" ShadowDepth="0" Opacity="1" />
+                </Button.Effect>
+            </Button>
+            
             <TextBlock x:Name="TotalPlaytimeTextBlock" 
                        Text="Total Playtime: 0 hours" 
                        Foreground="Black" 
                        HorizontalAlignment="Right"
                        VerticalAlignment="Center"
                        Margin="0,0,20,0"
-                       FontSize="16"/>
+                       FontSize="16"
+                       FontWeight="Bold"/>
         </Grid>
     </Grid>
 </Window>
