--- a/GameplayTimeTracker/MainWindow.xaml
+++ b/GameplayTimeTracker/MainWindow.xaml
@@ -194,10 +194,12 @@
           DragOver="Grid_DragOver"
           DragLeave="Grid_DragLeave"
           Drop="Grid_Drop">
-        <Grid x:Name="DragDropGrid" Panel.ZIndex="99" Visibility="Collapsed">
+        <Grid x:Name="DragDropGrid" Panel.ZIndex="97" Visibility="Collapsed">
             <Rectangle x:Name="DragOverBg"
+                       Fill="Transparent"
                        HorizontalAlignment="Stretch"
                        VerticalAlignment="Stretch"
+                       Panel.ZIndex="1"
                        Opacity="0.6" />
             <Rectangle x:Name="DragOverRectangle"
                        HorizontalAlignment="Stretch"
@@ -205,12 +207,13 @@
                        RadiusX="30"
                        RadiusY="30"
                        StrokeThickness="5"
-                       StrokeDashArray="10,10">
+                       StrokeDashArray="10,10"
+                       Panel.ZIndex="2">
                 <Rectangle.Fill>
-                    <SolidColorBrush Color="Gray" Opacity="0.2"/>
+                    <SolidColorBrush Color="Transparent" Opacity="0.2"/>
                 </Rectangle.Fill>
                 <Rectangle.Stroke>
-                    <SolidColorBrush Color="White" Opacity="1" />
+                    <SolidColorBrush Color="#DAE4FF" Opacity="1" />
                 </Rectangle.Stroke>
             </Rectangle>
             <TextBlock x:Name="DropText"
@@ -218,7 +221,8 @@
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
                 FontSize="30"
-                Foreground="White" />
+                Foreground="White"
+                Panel.ZIndex="3"/>
         </Grid>
 
         <Grid x:Name="Grid">
