--- a/GameplayTimeTracker/App.xaml
+++ b/GameplayTimeTracker/App.xaml
@@ -70,6 +70,14 @@
             <Setter Property="Width" Value="16" />
             <Setter Property="Height" Value="40" />
         </Style>
+        
+        <Style x:Key="CustomThumbStyleHorizontal" TargetType="Thumb">
+            <Setter Property="Background" Value="Gray" />
+            <Setter Property="BorderBrush" Value="Black" />
+            <Setter Property="BorderThickness" Value="1" />
+            <Setter Property="Width" Value="40" />
+            <Setter Property="Height" Value="16" />
+        </Style>
 
         <Style x:Key="RoundedButton" TargetType="Button">
             <Setter Property="Template">
