--- a/GameplayTimeTracker/MainWindow.xaml
+++ b/GameplayTimeTracker/MainWindow.xaml
@@ -155,31 +155,31 @@
                     <ColumnDefinition Width="300" />
                     <ColumnDefinition MaxWidth="0" />
                 </Grid.ColumnDefinitions>
-        
+
                 <Border Grid.ColumnSpan="3" CornerRadius="2" Background="Transparent" />
-        
+
                 <!-- Left Arrow (Scroll Line Left Command) -->
                 <RepeatButton Grid.Column="0" Style="{StaticResource ScrollBarLineButton}" Width="18"
                               Command="ScrollBar.LineLeftCommand" Content="M 4 0 L 4 8 L 0 4 Z" />
-        
+
                 <!-- Track -->
-                <Track Name="PART_Track" Grid.Column="1" IsDirectionReversed="False" >
+                <Track Name="PART_Track" Grid.Column="1" IsDirectionReversed="False">
                     <Track.DecreaseRepeatButton>
                         <RepeatButton Style="{StaticResource ScrollBarPageButton}" Command="ScrollBar.PageLeftCommand" />
                     </Track.DecreaseRepeatButton>
-        
+
                     <!-- Thumb -->
                     <Track.Thumb>
                         <Thumb Style="{StaticResource ScrollBarThumbHorizontal}" Margin="2"
                                Background="{StaticResource NormalBrush}"
                                BorderBrush="{StaticResource NormalBorderBrush}" />
                     </Track.Thumb>
-        
+
                     <Track.IncreaseRepeatButton>
                         <RepeatButton Style="{StaticResource ScrollBarPageButton}" Command="ScrollBar.PageRightCommand" />
                     </Track.IncreaseRepeatButton>
                 </Track>
-        
+
                 <!-- Right Arrow (Scroll Line Right Command) -->
                 <RepeatButton Grid.Column="2" Style="{StaticResource ScrollBarLineButton}" Width="18"
                               Command="ScrollBar.LineRightCommand" Content="M 0 0 L 4 4 L 0 8 Z" />
@@ -225,9 +225,9 @@
         <Grid x:Name="DragDropGrid" Panel.ZIndex="97" Visibility="Collapsed">
         </Grid>
 
-        <Grid x:Name="SettingsGrid" Panel.ZIndex="97" Visibility="Visible">
+        <Grid x:Name="SettingsGrid" Panel.ZIndex="97" Visibility="Collapsed">
             <Grid.Effect>
-                <DropShadowEffect ShadowDepth="0" BlurRadius="20"/>
+                <DropShadowEffect ShadowDepth="0" BlurRadius="20" />
             </Grid.Effect>
             <Rectangle x:Name="BgRect" Fill="#1D2640" Width="300" Height="400" RadiusX="10" RadiusY="10"></Rectangle>
             <Grid Width="300" Height="400">
@@ -235,15 +235,19 @@
                     <RowDefinition Height="50" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-                <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
-                    <StackPanel Orientation="Horizontal">
+                <ScrollViewer Grid.Row="0" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
+                    <StackPanel x:Name="HeaderPanel" Orientation="Horizontal">
                         <TextBlock Text="Preferences" FontSize="14" Margin="10" FontWeight="Bold" Foreground="White">
                             <TextBlock.Effect>
-                                <DropShadowEffect Color="Red" ShadowDepth="0" BlurRadius="20"/>
+                                <DropShadowEffect Color="Red" ShadowDepth="0" BlurRadius="20" />
                             </TextBlock.Effect>
                         </TextBlock>
                         <TextBlock Text="Themes" FontSize="14" Margin="10" FontWeight="Bold" Foreground="White"></TextBlock>
                     </StackPanel>
+                </ScrollViewer>
+
+                <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
+                    <StackPanel x:Name="ContentPanel"></StackPanel>
                 </ScrollViewer>
             </Grid>
         </Grid>
