--- a/GameplayTimeTracker/MainWindow.xaml
+++ b/GameplayTimeTracker/MainWindow.xaml
@@ -21,6 +21,7 @@
         <SolidColorBrush x:Key="HorizontalNormalBrush" Color="#FF686868" />
         <SolidColorBrush x:Key="HorizontalNormalBorderBrush" Color="#888" />
 
+
         <LinearGradientBrush x:Key="ListBoxBackgroundBrush" StartPoint="0,0" EndPoint="1,0.001">
             <GradientBrush.GradientStops>
                 <GradientStopCollection>
@@ -225,7 +226,7 @@
         <Grid x:Name="DragDropGrid" Panel.ZIndex="97" Visibility="Collapsed">
         </Grid>
 
-        <Grid x:Name="SettingsGrid" Panel.ZIndex="97" Visibility="Collapsed">
+        <Grid x:Name="SettingsGrid" Panel.ZIndex="97" Visibility="Visible">
             <Grid.Effect>
                 <DropShadowEffect ShadowDepth="0" BlurRadius="20" />
             </Grid.Effect>
@@ -235,19 +236,24 @@
                     <RowDefinition Height="50" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-                <ScrollViewer Grid.Row="0" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
-                    <StackPanel x:Name="HeaderPanel" Orientation="Horizontal">
-                        <TextBlock Text="Preferences" FontSize="14" Margin="10" FontWeight="Bold" Foreground="White">
-                            <TextBlock.Effect>
-                                <DropShadowEffect Color="Red" ShadowDepth="0" BlurRadius="20" />
-                            </TextBlock.Effect>
-                        </TextBlock>
-                        <TextBlock Text="Themes" FontSize="14" Margin="10" FontWeight="Bold" Foreground="White"></TextBlock>
-                    </StackPanel>
-                </ScrollViewer>
+                <Border BorderBrush="Gray" BorderThickness="0,0,0,1" Grid.Row="0">
+                    <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
+                        <StackPanel x:Name="HeaderPanel" Orientation="Horizontal">
+                            <TextBlock Text="Preferences" FontSize="14" Margin="10" FontWeight="Bold"
+                                       Foreground="White" VerticalAlignment="Center">
+                            </TextBlock>
+                            <TextBlock Text="Themes" FontSize="14" Margin="10" FontWeight="Bold" Foreground="White"
+                                       VerticalAlignment="Center">
+                                <TextBlock.Effect>
+                                    <DropShadowEffect Color="Red" ShadowDepth="0" BlurRadius="20" />
+                                </TextBlock.Effect>
+                            </TextBlock>
+                        </StackPanel>
+                    </ScrollViewer>
+                </Border>
 
                 <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
-                    <StackPanel x:Name="ContentPanel"></StackPanel>
+                    <StackPanel x:Name="ContentPanel" HorizontalAlignment="Center"></StackPanel>
                 </ScrollViewer>
             </Grid>
         </Grid>
