Changed settings grid default to collapsed

--- a/GameplayTimeTracker/MainWindow.xaml
+++ b/GameplayTimeTracker/MainWindow.xaml
@@ -226,7 +226,7 @@
         <Grid x:Name="DragDropGrid" Panel.ZIndex="97" Visibility="Collapsed">
         </Grid>
 
-        <Grid x:Name="SettingsGrid" Panel.ZIndex="97" Visibility="Visible">
+        <Grid x:Name="SettingsGrid" Panel.ZIndex="97" Visibility="Collapsed">
             <Grid.Effect>
                 <DropShadowEffect ShadowDepth="0" BlurRadius="20" />
             </Grid.Effect>
