--- a/GameplayTimeTracker/MainWindow.xaml
+++ b/GameplayTimeTracker/MainWindow.xaml
@@ -226,7 +226,7 @@
         <Grid x:Name="DragDropGrid" Panel.ZIndex="97" Visibility="Collapsed">
         </Grid>
 
-        <Grid x:Name="SettingsGrid" Panel.ZIndex="97" Visibility="Collapsed">
+        <Grid x:Name="SettingsGrid" Panel.ZIndex="97" Visibility="Visible">
             <Grid.Effect>
                 <DropShadowEffect ShadowDepth="0" BlurRadius="20" />
             </Grid.Effect>
@@ -239,14 +239,12 @@
                 <Border BorderBrush="Gray" BorderThickness="0,0,0,1" Grid.Row="0">
                     <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
                         <StackPanel x:Name="HeaderPanel" Orientation="Horizontal">
-                            <TextBlock Text="Preferences" FontSize="14" Margin="10" FontWeight="Bold"
+                            <TextBlock x:Name="Pref" Text="Preferences" FontSize="14" Margin="10" FontWeight="Bold"
                                        Foreground="White" VerticalAlignment="Center">
                             </TextBlock>
-                            <TextBlock Text="Themes" FontSize="14" Margin="10" FontWeight="Bold" Foreground="White"
+                            <TextBlock x:Name="Themes" Text="Themes" FontSize="14" Margin="10" FontWeight="Regular"
+                                       Foreground="White"
                                        VerticalAlignment="Center">
-                                <TextBlock.Effect>
-                                    <DropShadowEffect Color="Red" ShadowDepth="0" BlurRadius="20" />
-                                </TextBlock.Effect>
                             </TextBlock>
                         </StackPanel>
                     </ScrollViewer>
